# joelvandiver.com

./: .gitignore  README.md  blog.code-workspace  function_app.py  help.html  pyproject.toml  requirements.txt  run
.github/workflows/: azure-static-web-apps-kind-stone-0cc62ed1e.yml  azure-static-web-apps-white-moss-0316c441e.yml  main_joelvandiver.yml
_archive/: 2021-09-06-driver-portal.md
_drafts/: 2019-09-21-fs-aspnetcore-dependency-injection.md  2019-12-06-reflection-in-leadership.md  2024-01-08-k8s-dev.md  2024-01-09-rust-and-python.md  2024-03-16-Resilient-Gateway.md  back-to-school.md  fs-perf-partial-vs-lambda.fsx  fs-perf-partial-vs-lambda.md  postgresql.sh
_drafts/2024-01-09-rust-and-python/rust_python_hello_world/: Cargo.toml  test.py
_drafts/Guide/: index.md
_drafts/k8s-dev/: run
_guides/fsharp/: setup.md  test.fsx
_guides/intro/: index.md
_guides/python/: index.md  setup.md
_posts/: 2020-06-07-Fs-Duck-Typing.md  2020-06-25-List-Scan.md  2020-07-07-apod-azure-function.md  2020-08-02-docker-sql-server-sqlcmd.md  2020-09-12-avoid-mocking-stubbing-services.md
blog/: mkdocs.yml
blog/docs/: index.md
blog/web/: 404.html  index.html
docs/proto/: dependency_injection.md
learn/: .gitignore  debian.sh
learn/c/: program.c  run
learn/codility/: test_binary_gap.py  test_cyclic_rotation.py
learn/haskell/: infra.sh
learn/leet/: .gitignore  package-lock.json  package.json  tsconfig.json
learn/python/: python312.py
public/: index.html
site/: mkdocs.yml
site/docs/: about.md  index.md
site/web/: 404.html  index.html
(+228 files in other folders)
