[tool.poetry]
name = "jv-blog"
version = "0.1.0"
description = ""
authors = ["Joel Vandiver <joelvandiver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"