[tool.poetry]
name = "jv-blog"
version = "0.1.0"
description = ""
authors = ["Joel Vandiver <joelvandiver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"